--- a/app/src/main/res/layout/activity_publish_return_trip.xml
+++ b/app/src/main/res/layout/activity_publish_return_trip.xml
@@ -30,16 +30,23 @@
 
     </LinearLayout>
     <ImageView
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="75dp"
         android:id="@+id/returnimage"
         android:layout_width="500dp"
         android:layout_height="200dp"
-        app:srcCompat="@drawable/return_img"
+        app:srcCompat="@drawable/return_img" />
+
+    <TextView
         android:layout_marginLeft="40dp"
         android:layout_marginTop="300dp"
         android:text=" Coming back as well ?"
         android:textColor="@color/black"
         android:textSize="25dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,6 +85,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="510dp"
         android:background="@color/grey_for_text" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -90,8 +98,7 @@
             android:layout_marginTop="550dp"
             android:text=" No Thanks !"
             android:textColor="@color/black"
-            android:textSize="25dp"
-            />
+            android:textSize="25dp" />
 
         <ImageView
             android:id="@+id/publish_next"
