--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/body_container"
     tools:context=".Landing_Page"
     android:background="@drawable/custom_background_blue_long">
 
