--- a/app/src/main/res/layout/fragment_publish.xml
+++ b/app/src/main/res/layout/fragment_publish.xml
@@ -1,14 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PublishFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".User_Profile"
+    >
+    <ImageView
+        android:id="@+id/viewimage"
+        android:layout_width="70dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="350dp"
+        android:layout_marginTop="-50dp"
+        app:srcCompat="@drawable/img" />
     <TextView
+        android:layout_width="296dp"
+        android:layout_height="72dp"
+        android:layout_marginLeft="-20dp"
+        android:layout_marginTop="70dp"
+        android:gravity="center"
+        android:text="Where are you leaving from ?"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="350dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="30dp"
+        app:cardCornerRadius="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:hint="        Enter full address...."
+                android:textSize="22dp"
+                android:padding="20dp"
+                android:id="@+id/your_name_text"/>
+            <ImageView
+                android:id="@+id/viewsearchimage"
+                android:layout_width="50dp"
+                android:layout_height="129dp"
+                android:layout_marginLeft="-350dp"
+                android:layout_marginTop="-36dp"
+                app:srcCompat="@drawable/search_icon" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="horizontal">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="38dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="280dp"
+            app:srcCompat="@drawable/nav_icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="321dp"
+            android:text=" Use Current Location"
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+
+        <ImageView
+            android:id="@+id/nextimage"
+            android:layout_width="40dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="-90dp"
+            android:layout_marginTop="280dp"
+            app:srcCompat="@drawable/next_icon" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="550dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="370dp"
+        android:background="@color/grey_for_text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/histimage"
+            android:layout_width="38dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="350dp"
+            app:srcCompat="@drawable/history_icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="390dp"
+            android:text=" Bhiwadi, Rajasthan"
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+
+        <ImageView
+            android:id="@+id/nextpublishimage"
+            android:layout_width="40dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="-90dp"
+            android:layout_marginTop="350dp"
+            app:srcCompat="@drawable/next_icon" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="550dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="440dp"
+        android:background="@color/grey_for_text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/navimage"
+            android:layout_width="38dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="420dp"
+            app:srcCompat="@drawable/history_icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="460dp"
+            android:text=" Dharuhera, Rajasthan"
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+
+        <ImageView
+            android:id="@+id/next2image"
+            android:layout_width="40dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="-90dp"
+            android:layout_marginTop="420dp"
+            app:srcCompat="@drawable/next_icon" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="550dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="510dp"
+        android:background="@color/grey_for_text" />
+</RelativeLayout>
